--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <project.modulename>inventorymanagementsystem</project.modulename>
-        <project.mainclass>dev.nicholaskoldys.inventorymanagementsystem.MainApp</project.mainclass>
+        <project.mainclass>dev.nicholaskoldys.inventorymanagementsystem.InventoryManagementSystem</project.mainclass>
 
         <!-- * With Java11+ to use javafx an Main entry point into the application must not extend Application -->
         <project.shaded.mainclass>dev.nicholaskoldys.inventorymanagementsystem.ShadeMain</project.shaded.mainclass>
@@ -21,10 +21,11 @@
         <javafx.version>16</javafx.version>
 
         <maven.compiler.version>3.8.1</maven.compiler.version>
+        <maven.compiler.release>15</maven.compiler.release>
         <!-- <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target> -->
         <!-- Instead of the mess "source/target" setting the release at 15 prevents issues -->
-        <maven.compiler.release>15</maven.compiler.release>
+        
 
         <maven.shade.version>3.2.4</maven.shade.version>
         <javafx.maven.plugin.version>0.0.6</javafx.maven.plugin.version>
@@ -48,7 +49,17 @@
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
             <version>${javafx.version}</version>
         </dependency>
         <dependency>
@@ -85,8 +96,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.version}</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
+                    <!--<source>${maven.compiler.source}</source>-->
+                    <!--<target>${maven.compiler.target}</target>-->
                     <release>${maven.compiler.release}</release>
                 </configuration>
             </plugin>
@@ -135,10 +146,11 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>${javafx.maven.plugin.version}</version>
                 <configuration>
-                    <release>${maven.compiler.release}</release>
+                    <!--<release>${maven.compiler.release}</release>-->
                     <jlinkImageName>inventorymanagementsystem</jlinkImageName>
                     <launcher>inventory Management System</launcher>
-                    <mainClass>${project.modulename}/${project.mainclass}</mainClass><!-- <module-name>/<class-path> -->
+                    <!-- <mainClass>${project.modulename}/${project.mainclass}</mainClass>--><!-- <module-name>/<class-path> -->
+                    <mainClass>${project.mainclass}</mainClass>
                 </configuration>
             </plugin>
         </plugins>
